--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
   "name": "liff-vue",
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "license": "MIT",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "serve": "vite",
+    "build": "vite build"
   },
   "dependencies": {
-    "@line/liff": "2.22.2",
-    "vue": "3.3.4"
+    "@line/liff": "^2.23.1",
+    "element-plus": "^2.4.1",
+    "log-timestamp": "^0.3.0",
+    "vue": "^3.2.0"
   },
   "devDependencies": {
-    "@babel/types": "^7.22.10",
-    "@vitejs/plugin-vue": "4.3.1",
-    "typescript": "5.1.6",
-    "vite": "4.4.9",
-    "vue-tsc": "1.8.8"
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.12.0",
+    "@vitejs/plugin-vue": "^4.5.2",
+    "@vue/eslint-config-standard": "^8.0.1",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "eslint": "^8.0.1",
+    "eslint-plugin-vue": "^9.2.0",
+    "typescript": "^4.5.5",
+    "unplugin-element-plus": "^0.8.0",
+    "vite": "^4.4.9",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-node": "^3.0.2"
   }
 }
