--- a/package.json
+++ b/package.json
@@ -1,29 +1,39 @@
 {
   "name": "liff-vue",
-  "version": "0.1.0",
-  "license": "MIT",
+  "version": "0.0.0",
   "scripts": {
-    "serve": "vite",
-    "build": "vite build"
+    "dev": "vite",
+    "build": "eslint ./src --fix && vue-tsc --noEmit && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@line/liff": "^2.23.1",
-    "axios": "^1.6.5",
-    "element-plus": "^2.4.1",
-    "vue": "^3.2.0"
+    "@line/liff": "2.25.1",
+    "axios": "^1.7.9",
+    "express": "^4.21.2",
+    "log4js": "^6.9.1",
+    "vue": "3.5.13",
+    "vuetify": "^3.6.14"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.12.0",
-    "@vitejs/plugin-vue": "^4.5.2",
-    "@vue/eslint-config-standard": "^8.0.1",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "eslint": "^8.0.1",
-    "eslint-plugin-vue": "^9.2.0",
-    "typescript": "^4.5.5",
-    "unplugin-element-plus": "^0.8.0",
-    "vite": "^4.4.9",
-    "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-node": "^3.0.2"
+    "@eslint/js": "^9.20.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.5",
+    "@types/vue": "^2.0.0",
+    "@vitejs/plugin-vue": "5.2.1",
+    "eslint": "^9.20.0",
+    "eslint-plugin-vue": "^9.32.0",
+    "globals": "^15.14.0",
+    "liff-type": "^2.1.3",
+    "typescript": "5.7.3",
+    "typescript-eslint": "^8.23.0",
+    "unplugin-fonts": "^1.1.1",
+    "unplugin-vue-components": "^0.27.2",
+    "vite": "6.1.1",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vue-tsc": "2.2.2"
   }
 }
